Use Set.of() for empty set